--- a/etc/telegraf/telegraf.toml.j2
+++ b/etc/telegraf/telegraf.toml.j2
@@ -282,6 +282,19 @@
 {% endfor %}
 {% endif %}
 
+{% if appdynamics_enabled %}
+# if AppDynamics is enabled this 'exec' output is activated.
+# The command (python script) reads the metrics from STDIN and transform it
+# to the appropriate form for the AppDynamics Machine Agent HTTP Listener payload.
+[[outputs.exec]]
+    command = ["python3", "{{ appdynamics_output_script_path }}"]
+    timeout = "10s"
+    data_format = "json"
+    # Ignore any micrometer_metrics
+    [outputs.exec.tagdrop]
+        micrometer_metrics = ["true"]
+{% endif %}
+
 {% if micrometer_metrics %}
 ####################################################################################
 # App metrics via micrometer                                                       #
@@ -334,15 +347,4 @@
   micrometer_metrics = ["true"]
 
 ####################################################################################
-{% endif %}
-
-{% if appdynamics_enabled %}
-# if AppDynamics is enabled this 'exec' output is activated.
-# The command (python script) reads the metrics from STDIN and transform it
-# to the appropriate form for the AppDynamics Machine Agent HTTP Listener payload.
-[[outputs.exec]]
-  command = ["python3", "/home/vcap/app/buildpack/telemetry/appdynamics_telegraf_output.py"]
-  timeout = "10s"
-  data_format = "json"
-
 {% endif %}
